--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         }, 0);
       }
     </script>
-  <link href="https://open-access-network.b-cdn.net/bundle.css" rel="stylesheet"></head>
+  <link href="https://open-access-dev.b-cdn.net/bundle.css" rel="stylesheet"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="https://open-access-network.b-cdn.net/main.31818970fd1cbdfaa8b3.bundle.js"></script></body>
+  <script type="text/javascript" src="https://open-access-dev.b-cdn.net/main.a03260d4af5ed9b6885a.bundle.js"></script></body>
 </html>
