--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         }, 0);
       }
     </script>
-  <link href="https://open-access-dev.b-cdn.net/bundle.css" rel="stylesheet"></head>
+  <link href="https://open-access-dev.b-cdn.net/app/bundle.css" rel="stylesheet"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="https://open-access-dev.b-cdn.net/main.8827638281c2eff99ec7.bundle.js"></script></body>
+  <script type="text/javascript" src="https://open-access-dev.b-cdn.net/app/main.df97ec732eab865f57c2.bundle.js"></script></body>
 </html>
