--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         }, 0);
       }
     </script>
-  <link href="https://open-access-dev.s3.amazonaws.com/app/bundle.css" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="https://open-access-dev.s3.amazonaws.com/app/favicon.ico"><link href="https://open-access-dev.s3.amazonaws.com/app/bundle.css" rel="stylesheet"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="https://open-access-dev.s3.amazonaws.com/app/main.6c3c2fd99d5a2f15a3bf.bundle.js"></script></body>
+  <script type="text/javascript" src="https://open-access-dev.s3.amazonaws.com/app/main.d05e3f8b2607856607c3.bundle.js"></script></body>
 </html>
