--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
       <ul
         style="list-style-type: none; margin: 0; padding: 0; overflow: hidden;"
       >
-        <li><a nativelink href="/terms">Terms of Service</a></li>
+        <li><a data-nativelink href="/terms">Terms of Service</a></li>
         <li>|</li>
-        <li><a nativelink href="/pp">Privacy Policy</a></li>
+        <li><a data-nativelink href="/pp">Privacy Policy</a></li>
       </ul>
     </footer>
-  <script type="text/javascript" src="https://open-access-dev.s3.amazonaws.com/app/main.301fa75b38ec71b13242.bundle.js"></script></body>
+  <script type="text/javascript" src="https://open-access-dev.s3.amazonaws.com/app/main.00a2fb63fcedbb277b83.bundle.js"></script></body>
 </html>
