--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         }
       }
     </script>
-  <link rel="shortcut icon" href="https://open-access-network.s3.amazonaws.com/app/favicon.ico"><link href="https://open-access-network.s3.amazonaws.com/app/bundle.css" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="https://open-access-dev.s3.amazonaws.com/app/favicon.ico"><link href="https://open-access-dev.s3.amazonaws.com/app/bundle.css" rel="stylesheet"></head>
 
   <body style="min-height: 1200px; position: relative; padding-bottom: 200px;">
     <div id="root"></div>
@@ -118,5 +118,5 @@
         <li><a data-nativelink href="/pp">Privacy Policy</a></li>
       </ul>
     </footer>
-  <script type="text/javascript" src="https://open-access-network.s3.amazonaws.com/app/main.5b8ac31c0bd5cc437c30.bundle.js"></script></body>
+  <script type="text/javascript" src="https://open-access-dev.s3.amazonaws.com/app/main.0574c49cbc333c5b7f4e.bundle.js"></script></body>
 </html>
